--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Vehicle Parking App{% endblock %}</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap CSS (because we all love not writing CSS from scratch) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Vehicle Parking App</a>
+            <a class="navbar-brand" href="/">🚗 ParkIt!</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -19,20 +19,20 @@
                 <ul class="navbar-nav ms-auto">
                     {% if 'user_logged_in' in session %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/user_dashboard">Dashboard</a>
+                        <a class="nav-link" href="/user_dashboard">My Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user_history">My History</a>
+                        <a class="nav-link" href="/user_history">Parking History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
+                        <a class="nav-link" href="/logout">Log Out</a>
                     </li>
                     {% elif 'admin_logged_in' in session %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin_dashboard">Admin Dashboard</a>
+                        <a class="nav-link" href="/admin_dashboard">Admin Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin_parking_lots">Parking Lots</a>
+                        <a class="nav-link" href="/admin_parking_lots">Lots</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/admin_users">Users</a>
@@ -41,17 +41,17 @@
                         <a class="nav-link" href="/admin_summary">Summary</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
+                        <a class="nav-link" href="/logout">Log Out</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/user_login">User Login</a>
+                        <a class="nav-link" href="/user_login">Sign In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user_register">User Register</a>
+                        <a class="nav-link" href="/user_register">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin_login">Admin Login</a>
+                        <a class="nav-link" href="/admin_login">Admin?</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -69,18 +69,17 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-        {% block content %}
-        
-        {% endblock %}
+        {% block content %}{% endblock %}
     </div>
 
     <footer class="footer bg-dark text-white-50 mt-auto py-3" style="position: fixed; bottom: 0; width: 100%;">
         <div class="container text-center">
-            <span>Vehicle Parking App &copy; 2025 | Modern Application Development I</span>
+            
+            <span style="font-size:0.95em;">Modern Application Development I | Park happy, code happier.</span>
         </div>
     </footer>
 
-    <!-- Bootstrap JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS Bundle with Popper (because why not) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
