--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -9,21 +9,21 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header bg-primary text-white">
-                    <h3 class="text-center mb-0">User Login</h3>
+                    <h3 class="text-center mb-0">Sign in to Your Account</h3>
                 </div>
                 <div class="card-body">
                     <form action="{{ url_for('user_login') }}" method="POST">
                         <div class="mb-3">
-                            <label for="email_id" class="form-label">Email ID</label>
+                            <label for="email_id" class="form-label">Email</label>
                             <input type="email" class="form-control" id="email_id" name="email_id" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Password</label>
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Login</button>
+                        <button type="submit" class="btn btn-primary w-100">Log In</button>
                     </form>
-                    <p class="text-center mt-3">Don't have an account? <a href="{{ url_for('user_register') }}">Register here</a></p>
+                    <p class="text-center mt-3">Don't have an account? <a href="{{ url_for('user_register') }}">Sign up here</a></p>
                 </div>
             </div>
         </div>
