Milestone-VP Final-Submission

--- a/templates/admin_edit_parking_lot.html
+++ b/templates/admin_edit_parking_lot.html
@@ -18,7 +18,7 @@
                     <input type="text" class="form-control" id="prime_location_name" name="prime_location_name" value="{{ lot.prime_location_name }}" required>
                 </div>
                 <div class="mb-3">
-                    <label for="price_per_hour" class="form-label">Hourly Rate ($)</label>
+                    <label for="price_per_hour" class="form-label">Hourly Rate (₹)</label>
                     <input type="number" step="0.01" class="form-control" id="price_per_hour" name="price_per_hour" value="{{ lot.price_per_hour }}" required min="0">
                 </div>
                 <div class="mb-3">
