--- a/templates/admin_summary.html
+++ b/templates/admin_summary.html
@@ -66,7 +66,7 @@
             <div class="card text-white bg-success mb-3 h-100">
                 <div class="card-header" style="color: rgb(41, 23, 2);">Total Revenue</div>
                 <div class="card-body">
-                    <h3 class="card-title">${{ "%.2f"|format(total_revenue) }}</h3>
+                    <h3 class="card-title">₹{{ "%.2f"|format(total_revenue) }}</h3>
                     <p class="card-text">Total money earned from bookings.</p>
                 </div>
             </div>
