--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Vehicle Parking App{% endblock %}</title>
     <!-- Bootstrap CSS (because we all love not writing CSS from scratch) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
@@ -75,11 +76,12 @@
     <footer class="footer bg-dark text-white-50 mt-auto py-3" style="position: fixed; bottom: 0; width: 100%;">
         <div class="container text-center">
             
-            <span style="font-size:0.95em;">Modern Application Development I | Park happy, code happier.</span>
+            <span style="font-size:0.90em;">Modern Application Development I | Park happy, code happier.</span>
         </div>
     </footer>
 
     <!-- Bootstrap JS Bundle with Popper (because why not) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
 </body>
 </html>
