--- a/templates/user_history.html
+++ b/templates/user_history.html
@@ -23,7 +23,7 @@
                             <p class="card-text"><strong>Parked On:</strong> {{ data.reservation.parking_timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</p>
                             {% if data.reservation.leaving_timestamp %}
                                 <p class="card-text"><strong>Released On:</strong> {{ data.reservation.leaving_timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</p>
-                                <p class="card-text"><strong>Total Cost:</strong> <span class="fw-bold text-success">${{ "%.2f"|format(data.reservation.total_cost) }}</span></p>
+                                <p class="card-text"><strong>Total Cost:</strong> <span class="fw-bold text-success">₹{{ "%.2f"|format(data.reservation.total_cost) }}</span></p>
                                 <span class="badge bg-success">Done</span>
                             {% else %}
                                 <p class="card-text"><strong>Status:</strong> <span class="badge bg-warning">Active</span></p>
